@@ -1,8 +1,11 @@
 1.6.1
+Output msgkey ( session ID ) on start up.
+Added vertical delete.
+Added vertical cut.
 Added "Auto Set Tabs" to prefs to set tabs to one space when ALT selecting and reset on mouse release.
 Fixed signal name change in terminal plugin for qt6.
 Set min tab width to 1.
-Added vertical select ( hold 'ALT' then click selecting text ).
+Added vertical select ( hold 'CTRL+ALT' when drag selecting text ).
 Added number of sessions to prefs max=128 default 24.
 Added extra mime types to cpplang plugin.
 Minor fix to .desktop files.
